<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <TableLayout 
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
        <TableRow android:gravity="center_horizontal" android:layout_marginTop="7dip">
		    <TextView android:layout_width="fill_parent" android:id="@+id/textView1" 
		        android:textAppearance="?android:attr/textAppearanceMedium" 
		        android:text="@string/colour_info" android:gravity="center_horizontal" android:layout_height="wrap_content" android:layout_weight="1">
		    </TextView>
		</TableRow>
		<TableRow android:gravity="center_horizontal" android:layout_marginTop="7dip">
	        <ImageView 
	            android:layout_marginTop="7dip"
	            android:layout_width="100dip" 
	            android:layout_height="50dip" 
	            android:id="@+id/colourBox" 
	            android:contentDescription="@string/selected_selected_colour" >
	        </ImageView>
	    </TableRow>		    
            <TableRow android:gravity="center_horizontal" android:layout_marginTop="7dip">
                <TextView 
                    android:layout_width="100dip" 
                    android:id="@+id/baseLabel" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="@string/selected_base_colour" 
                    android:layout_height="wrap_content" >
                </TextView>
                <TextView 
                    android:layout_width="fill_parent" 
                    android:id="@+id/baseValue" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="" 
                    android:layout_height="wrap_content"  >
                </TextView>
            </TableRow>    
            
		    <TableRow android:gravity="center_horizontal" android:layout_marginTop="7dip">
		        <TextView 
		            android:layout_width="100dip" 
		            android:id="@+id/hexLabel" 
		            android:textAppearance="?android:attr/textAppearanceSmall" 
		            android:text="@string/selected_hex_value"  
		            android:layout_height="wrap_content" >
		        </TextView>
	            <TextView 
	                android:layout_width="fill_parent" 
	                android:id="@+id/hexValue" 
	                android:textAppearance="?android:attr/textAppearanceSmall" 
	                android:text="" 
	                android:layout_height="wrap_content" >
	            </TextView>
		    </TableRow>    
		    
            <TableRow android:gravity="center_horizontal" android:layout_marginTop="5dip">
                <TextView 
                    android:layout_width="100dip" 
                    android:id="@+id/rgbLabel" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="@string/selected_rgb_value" >
                </TextView>
                <TextView 
                    android:layout_width="fill_parent" 
                    android:id="@+id/rgbValue" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="" 
                    android:layout_height="wrap_content" >
                </TextView>
            </TableRow>    
            
            <TableRow android:gravity="center_horizontal" android:layout_marginTop="5dip">
                <TextView 
                    android:layout_width="100dip" 
                    android:id="@+id/hsvLabel" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="@string/selected_hsv_value" 
                    android:layout_height="wrap_content">
                </TextView>
                <TextView 
                    android:layout_width="fill_parent" 
                    android:id="@+id/hsvValue" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text=""
                    android:layout_height="wrap_content" >
                </TextView>
            </TableRow>    
            
            <TableRow android:gravity="center_horizontal" android:layout_marginTop="5dip">
                <TextView 
                    android:layout_width="100dip" 
                    android:id="@+id/intLabel" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="@string/selected_colour_int_value" 
                    android:layout_height="wrap_content">
                </TextView>
                <TextView 
                    android:layout_width="fill_parent" 
                    android:id="@+id/intValue" 
                    android:textAppearance="?android:attr/textAppearanceSmall" 
                    android:text="" 
                    android:layout_height="wrap_content" >
                </TextView>
            </TableRow>  
            <TableRow android:layout_gravity="center_horizontal" android:gravity="center_horizontal">
                <Button 
                    android:id="@+id/selectGenerators"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/selected_select_scheme" android:layout_marginTop="7dip">
                </Button>
            </TableRow>
    </TableLayout>
</ScrollView>